AC_PREREQ([2.59])
AC_INIT([libiniparser],
	[1.0.0],
	[coder@kyleisom.net],
	[libiniparser],
	[https://docs.kyleisom.net/p/libiniparser/])
AM_INIT_AUTOMAKE([1.14 foreign])
AC_CONFIG_SRCDIR([src/iniparser/iniparser.h])
AC_CHECK_HEADERS
AC_CONFIG_FILES([Makefile src/Makefile docs/Makefile test/Makefile])
AC_CONFIG_MACRO_DIR([m4])

LT_INIT
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_CC_C_O

AC_OUTPUT
